--- a/docker-compose-armhf.yml
+++ b/docker-compose-armhf.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
-  nextcloudplus:
-    image: ownyourbits/nextcloudplus-armhf
+  nextcloudpi:
+    image: ownyourbits/nextcloudpi-armhf
     command: "${IP}"
     ports:
      - "80:80"
