--- a/docker-compose-ncpdev.yml
+++ b/docker-compose-ncpdev.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
-  nextcloudplus-dev:
-    image: ownyourbits/nextcloudplus-x86
+  nextcloudpi-dev:
+    image: ownyourbits/nextcloudpi-x86
     command: "${IP}"
     ports:
      - "80:80"
