--- a/docker-armhf/nextcloud/Dockerfile
+++ b/docker-armhf/nextcloud/Dockerfile
@@ -11,6 +11,9 @@ COPY etc/ncp-config.d/nc-init.sh etc/ncp-config.d/nc-nextcloud.sh /
 
 RUN \
 
+# mark as image build
+touch /.ncp-image; \
+
 # installation ( /var/www/nextcloud -> /data/app which will be in a volume )
 apt-get update; \
 apt-get install --no-install-recommends -y wget ca-certificates sudo; \
@@ -32,7 +35,8 @@ rm -f /var/log/alternatives.log /var/log/apt/*; \
 
 # specific cleanup
 apt-get purge -y wget ca-certificates; \
-rm /nc-nextcloud.sh
+rm /nc-nextcloud.sh; \
+rm /.ncp-image; 
 
 COPY docker-common/nextcloud/020nextcloud /etc/services-enabled.d/
 COPY bin/ncp-provisioning.sh /usr/local/bin/
