build: generate armhf container locally with qemu-user

--- a/docker-armhf/debian-ncp/Dockerfile
+++ b/docker-armhf/debian-ncp/Dockerfile
@@ -4,6 +4,8 @@ MAINTAINER Ignacio Núñez Hernanz <nacho@ownyourbits.com>
 
 CMD /bin/bash
 
+COPY qemu-arm-static /usr/bin
+
 RUN mkdir -p /etc/services-available.d  /etc/services-enabled.d
 
 COPY docker-common/debian-ncp/run-parts.sh /
