--- a/config-rock64.conf
+++ b/config-rock64.conf
@@ -2,5 +2,5 @@
 # Place here configuration options that differ from standard NCP build options
 #
 
-#EXPERT=yes
-#LIB_TAG=development
+EXPERT=yes
+LIB_TAG=development
