--- a/docker/lamp/Dockerfile
+++ b/docker/lamp/Dockerfile
@@ -26,7 +26,7 @@ sed -i "s|^datadir.*|datadir = /data-ro/database|" /etc/mysql/mariadb.conf.d/90-
 # package cleanup 
 apt-get autoremove -y; \
 apt-get clean; \
-rm /var/lib/apt/lists/* -f; \
+find /var/lib/apt/lists -type f | xargs rm; \
 rm -rf /usr/share/man/*; \
 rm -rf /usr/share/doc/*; \
 rm /var/cache/debconf/*-old; \
