--- a/etc/ncp-config.d/DDNS_duckDNS.cfg
+++ b/etc/ncp-config.d/DDNS_duckDNS.cfg
@@ -1,6 +1,6 @@
 {
   "id": "DDNS_duckDNS",
-  "name": "DDNS_duckDNS",
+  "name": "DynamicDNS from duckDNS",
   "title": "DDNS_duckDNS",
   "description": "Free Dynamic DNS provider (need account from https://duckdns.org)",
   "info": "",
