complete config options

--- a/etc/ncp-config.d/NFS.cfg
+++ b/etc/ncp-config.d/NFS.cfg
@@ -15,22 +15,27 @@
     {
       "id": "DIR",
       "name": "Dir",
-      "value": "/media/USBdrive/ncdata/admin/files"
+      "value": "/media/USBdrive/ncdata/admin/files",
+      "suggest": "/media/USBdrive/ncdata/admin/files",
+      "type": "directory"
     },
     {
       "id": "SUBNET",
       "name": "Subnet",
-      "value": "192.168.1.0/24"
+      "value": "192.168.1.0/24",
+      "suggest": "192.168.1.0/24"
     },
     {
       "id": "USER",
       "name": "User",
-      "value": "www-data"
+      "value": "www-data",
+      "suggest": "www-data"
     },
     {
       "id": "GROUP",
       "name": "Group",
-      "value": "www-data"
+      "value": "www-data",
+      "suggest": "www-data"
     }
   ]
 }
