--- a/etc/ncp-config.d/SSH.cfg
+++ b/etc/ncp-config.d/SSH.cfg
@@ -15,7 +15,8 @@
     {
       "id": "USER",
       "name": "User",
-      "value": "root"
+      "value": "root",
+      "suggest": "root"
     },
     {
       "id": "PASS",
