--- a/etc/ncp-config.d/UFW.cfg
+++ b/etc/ncp-config.d/UFW.cfg
@@ -15,17 +15,23 @@
     {
       "id": "HTTP",
       "name": "Http",
-      "value": "80"
+      "value": "80",
+      "default": "80",
+      "suggest": "80"
     },
     {
       "id": "HTTPS",
       "name": "Https",
-      "value": "443"
+      "value": "443",
+      "default": "443",
+      "suggest": "443"
     },
     {
       "id": "SSH",
       "name": "Ssh",
-      "value": "22"
+      "value": "22",
+      "default": "22",
+      "suggest": "22"
     }
   ]
 }
