--- a/etc/ncp-config.d/dnsmasq.cfg
+++ b/etc/ncp-config.d/dnsmasq.cfg
@@ -15,17 +15,20 @@
     {
       "id": "DOMAIN",
       "name": "Domain",
-      "value": "mycloud.ownyourbits.com"
+      "value": "mycloud.ownyourbits.com",
+      "suggest": "mycloud.ownyourbits.com"
     },
     {
       "id": "DNSSERVER",
       "name": "DNS server",
-      "value": "8.8.8.8"
+      "value": "8.8.8.8",
+      "suggest": "8.8.8.8"
     },
     {
       "id": "CACHESIZE",
       "name": "Cache size",
-      "value": "150"
+      "value": "150",
+      "suggest": "150"
     }
   ]
 }
