--- a/etc/ncp-config.d/duckDNS.cfg
+++ b/etc/ncp-config.d/duckDNS.cfg
@@ -15,12 +15,14 @@
     {
       "id": "DOMAIN",
       "name": "Domain",
-      "value": "mycloud.duckdns.org"
+      "value": "mycloud.duckdns.org",
+      "suggest": "mycloud.duckdns.org"
     },
     {
       "id": "TOKEN",
       "name": "Token",
-      "value": "your-duckdns-token"
+      "value": "your-duckdns-token",
+      "suggest": "your-duckdns-token"
     }
   ]
 }
