--- a/etc/ncp-config.d/fail2ban.cfg
+++ b/etc/ncp-config.d/fail2ban.cfg
@@ -2,9 +2,7 @@
   "id": "fail2ban",
   "name": "Fail2ban, limit brute force authentication attempts",
   "title": "fail2ban",
-  "description": "Brute force protection for SSH and NextCloud. Fail2Ban consists of a client,\n
-       server and configuration files to limit \n
-       brute force authentication attempts.",
+  "description": "Brute force protection for SSH and NextCloud. Fail2Ban consists of a client,\nserver and configuration files to limit \nbrute force authentication attempts.",
   "info": "",
   "infotitle": "",
   "params": [
@@ -17,17 +15,23 @@
     {
       "id": "BANTIME",
       "name": "Bantime",
-      "value": "600"
+      "value": "600",
+      "default": "600",
+      "suggest": "600"
     },
     {
       "id": "FINDTIME",
       "name": "Findtime",
-      "value": "600"
+      "value": "600",
+      "default": "600",
+      "suggest": "600"
     },
     {
       "id": "MAXRETRY",
       "name": "Maxretry",
-      "value": "6"
+      "value": "6",
+      "default": "6",
+      "suggest": "6"
     },
     {
       "id": "MAILALERTS",
@@ -38,7 +42,8 @@
     {
       "id": "EMAIL",
       "name": "Email",
-      "value": "optional@email.com"
+      "value": "",
+      "suggest": "optional@email.com"
     }
   ]
 }
