--- a/etc/ncp-config.d/freeDNS.cfg
+++ b/etc/ncp-config.d/freeDNS.cfg
@@ -15,17 +15,20 @@
     {
       "id": "UPDATEHASH",
       "name": "Update Hash",
-      "value": "abcdefghijklmnopqrstuvwxyzABCDEFGHIJK1234567"
+      "value": "",
+      "suggest": "abcdefghijklmnopqrstuvwxyzABCDEFGHIJK1234567"
     },
     {
       "id": "DOMAIN",
       "name": "Domain",
-      "value": "mynextcloud.example.com"
+      "value": "mynextcloud.example.com",
+      "suggest": "mynextcloud.example.com"
     },
     {
       "id": "UPDATEINTERVAL",
       "name": "Update Interval",
-      "value": "30"
+      "value": "30",
+      "suggest": "30"
     }
   ]
 }
