--- a/etc/ncp-config.d/letsencrypt.cfg
+++ b/etc/ncp-config.d/letsencrypt.cfg
@@ -9,17 +9,20 @@
     {
       "id": "DOMAIN",
       "name": "Domain",
-      "value": "mycloud.ownyourbits.com"
+      "value": "",
+      "suggest": "mycloud.ownyourbits.com"
     },
     {
       "id": "EMAIL",
       "name": "Email",
-      "value": "mycloud@ownyourbits.com"
+      "value": "",
+      "suggest": "mycloud@ownyourbits.com"
     },
     {
       "id": "NOTIFYUSER",
       "name": "Notify user",
-      "value": "ncp"
+      "value": "ncp",
+      "suggest": "ncp"
     }
   ]
 }
