--- a/etc/ncp-config.d/nc-admin.cfg
+++ b/etc/ncp-config.d/nc-admin.cfg
@@ -9,18 +9,19 @@
     {
       "id": "USER",
       "name": "User",
-      "value": "ncp"
+      "value": "ncp",
+      "suggest": "ncp"
     },
     {
       "id": "PASSWORD",
       "name": "Password",
-      "value": "ownyourbits",
+      "value": "",
       "type": "password"
     },
     {
       "id": "CONFIRM",
       "name": "Confirm password",
-      "value": "ownyourbits",
+      "value": "",
       "type": "password"
     }
   ]
