--- a/etc/ncp-config.d/nc-autoupdate-nc.cfg
+++ b/etc/ncp-config.d/nc-autoupdate-nc.cfg
@@ -15,7 +15,8 @@
     {
       "id": "NOTIFYUSER",
       "name": "Notify user",
-      "value": "ncp"
+      "value": "ncp",
+      "suggest": "ncp"
     }
   ]
 }
