--- a/etc/ncp-config.d/nc-backup-auto.cfg
+++ b/etc/ncp-config.d/nc-backup-auto.cfg
@@ -34,11 +34,13 @@
     {
       "id": "BACKUPDAYS",
       "name": "Backup days",
+      "suggest": "7",
       "value": "7"
     },
     {
       "id": "BACKUPLIMIT",
       "name": "Backup limit",
+      "suggest": "4",
       "value": "4"
     }
   ]
