--- a/etc/ncp-config.d/nc-format-USB.cfg
+++ b/etc/ncp-config.d/nc-format-USB.cfg
@@ -9,7 +9,8 @@
     {
       "id": "LABEL",
       "name": "Label",
-      "value": "myCloudDrive"
+      "value": "myCloudDrive",
+      "suggest": "myCloudDrive"
     }
   ]
 }
