--- a/etc/ncp-config.d/nc-forward-ports.cfg
+++ b/etc/ncp-config.d/nc-forward-ports.cfg
@@ -9,12 +9,14 @@
     {
       "id": "HTTPSPORT",
       "name": "Https port",
-      "value": "443"
+      "value": "443",
+      "suggest": "443"
     },
     {
       "id": "HTTPPORT",
       "name": "Http port",
-      "value": "80"
+      "value": "80",
+      "suggest": "80"
     }
   ]
 }
