--- a/etc/ncp-config.d/nc-hdd-monitor.cfg
+++ b/etc/ncp-config.d/nc-hdd-monitor.cfg
@@ -15,12 +15,14 @@
     {
       "id": "NOTIFYUSER",
       "name": "Notify user",
-      "value": "ncp"
+      "value": "ncp",
+      "suggest": "ncp"
     },
     {
       "id": "EMAIL",
       "name": "Email",
-      "value": "optional@email.com"
+      "value": "",
+      "suggest": "optional@email.com"
     }
   ]
 }
