--- a/etc/ncp-config.d/nc-import-ncp.cfg
+++ b/etc/ncp-config.d/nc-import-ncp.cfg
@@ -9,7 +9,9 @@
     {
       "id": "FILE",
       "name": "File",
-      "value": "/media/USBdrive/ncp-config_xxxxxx.cfg"
+      "value": "/media/USBdrive/ncp-config_xxxxxx.cfg",
+      "suggest": "/media/USBdrive/ncp-config_xxxxxx.cfg",
+      "type": "file"
     }
   ]
 }
