--- a/etc/ncp-config.d/nc-init.cfg
+++ b/etc/ncp-config.d/nc-init.cfg
@@ -9,7 +9,8 @@
     {
       "id": "ADMINUSER",
       "name": "Admin user",
-      "value": "ncp"
+      "value": "ncp",
+      "suggest": "ncp"
     },
     {
       "id": "ADMINPASS",
