--- a/etc/ncp-config.d/nc-limits.cfg
+++ b/etc/ncp-config.d/nc-limits.cfg
@@ -9,22 +9,30 @@
     {
       "id": "MAXFILESIZE",
       "name": "Maximum file size",
-      "value": "10G"
+      "value": "10G",
+      "default": "10G",
+      "suggest": "10G"
     },
     {
       "id": "MEMORYLIMIT",
       "name": "Memory limit",
-      "value": "0"
+      "value": "0",
+      "default": "0",
+      "suggest": "0"
     },
     {
       "id": "PHPTHREADS",
       "name": "PHP threads",
-      "value": "0"
+      "value": "0",
+      "default": "0",
+      "suggest": "0"
     },
     {
       "id": "REDISMEM",
       "name": "Redis memory",
-      "value": "0"
+      "value": "0",
+      "default": "0",
+      "suggest": "0"
     }
   ]
 }
