--- a/etc/ncp-config.d/nc-nextcloud.cfg
+++ b/etc/ncp-config.d/nc-nextcloud.cfg
@@ -20,17 +20,20 @@
     {
       "id": "MAXFILESIZE",
       "name": "Maximum file size",
-      "value": "2G"
+      "value": "10G",
+      "suggest": "10G"
     },
     {
       "id": "MEMORYLIMIT",
       "name": "Memory limit",
-      "value": "768M"
+      "value": "768M",
+      "suggest": "768M"
     },
     {
       "id": "MAXTRANSFERTIME",
       "name": "Maximum transfer time",
-      "value": "3600"
+      "value": "3600",
+      "suggest": "3600"
     }
   ]
 }
