--- a/etc/ncp-config.d/nc-notify-updates.cfg
+++ b/etc/ncp-config.d/nc-notify-updates.cfg
@@ -15,7 +15,8 @@
     {
       "id": "USER",
       "name": "User",
-      "value": "ncp"
+      "value": "ncp",
+      "suggest": "ncp"
     }
   ]
 }
