--- a/etc/ncp-config.d/nc-rsync-auto.cfg
+++ b/etc/ncp-config.d/nc-rsync-auto.cfg
@@ -15,12 +15,14 @@
     {
       "id": "DESTINATION",
       "name": "Destination",
-      "value": "user@ip:/path/to/sync"
+      "value": "user@ip:/path/to/sync",
+      "suggest": "user@ip:/path/to/sync"
     },
     {
       "id": "SYNCDAYS",
       "name": "Sync days",
-      "value": "3"
+      "value": "3",
+      "suggest": "3"
     }
   ]
 }
