--- a/etc/ncp-config.d/nc-rsync.cfg
+++ b/etc/ncp-config.d/nc-rsync.cfg
@@ -9,7 +9,8 @@
     {
       "id": "DESTINATION",
       "name": "Destination",
-      "value": "user@ip:/path/to/sync"
+      "value": "user@ip:/path/to/sync",
+      "suggest": "user@ip:/path/to/sync"
     }
   ]
 }
