--- a/etc/ncp-config.d/nc-scan-auto.cfg
+++ b/etc/ncp-config.d/nc-scan-auto.cfg
@@ -15,7 +15,8 @@
     {
       "id": "SCANINTERVAL",
       "name": "Scan Interval",
-      "value": "60"
+      "value": "60",
+      "suggest": "60"
     }
   ]
 }
