--- a/etc/ncp-config.d/nc-snapshot-sync.cfg
+++ b/etc/ncp-config.d/nc-snapshot-sync.cfg
@@ -15,12 +15,15 @@
     {
       "id": "SNAPDIR",
       "name": "Snapshot directory",
-      "value": "/media/USBdrive/ncp-snapshots"
+      "value": "/media/USBdrive/ncp-snapshots",
+      "suggest": "/media/USBdrive/ncp-snapshots",
+      "type": "directory"
     },
     {
       "id": "DESTINATION",
       "name": "Destination",
-      "value": "/media/myBackupDrive/ncp-snapshots"
+      "value": "/media/myBackupDrive/ncp-snapshots",
+      "suggest": "/media/myBackupDrive/ncp-snapshots"
     },
     {
       "id": "COMPRESSION",
@@ -31,7 +34,8 @@
     {
       "id": "SYNCDAYS",
       "name": "Sync days",
-      "value": "1"
+      "value": "1",
+      "suggest": "1"
     }
   ]
 }
