--- a/etc/ncp-config.d/nc-swapfile.cfg
+++ b/etc/ncp-config.d/nc-swapfile.cfg
@@ -9,12 +9,14 @@
     {
       "id": "SWAPFILE",
       "name": "Swapfile",
-      "value": "/media/USBdrive/swap"
+      "value": "/media/USBdrive/swap",
+      "suggest": "/media/USBdrive/swap"
     },
     {
       "id": "SWAPSIZE",
       "name": "Swapsize",
-      "value": "1024"
+      "value": "1024",
+      "suggest": "1024"
     }
   ]
 }
