--- a/etc/ncp-config.d/nc-update-nextcloud.cfg
+++ b/etc/ncp-config.d/nc-update-nextcloud.cfg
@@ -9,7 +9,8 @@
     {
       "id": "VERSION",
       "name": "Version",
-      "value": "0"
+      "value": "0",
+      "suggest": "0"
     }
   ]
 }
