--- a/etc/ncp-config.d/no-ip.cfg
+++ b/etc/ncp-config.d/no-ip.cfg
@@ -15,7 +15,8 @@
     {
       "id": "USER",
       "name": "User",
-      "value": "my-noip-user@email.com"
+      "value": "my-noip-user@email.com",
+      "suggest": "my-noip-user@email.com"
     },
     {
       "id": "PASS",
@@ -26,12 +27,14 @@
     {
       "id": "DOMAIN",
       "name": "Domain",
-      "value": "mycloud.ownyourbits.com"
+      "value": "mycloud.ownyourbits.com",
+      "suggest": "mycloud.ownyourbits.com"
     },
     {
       "id": "TIME",
       "name": "Time",
-      "value": "30"
+      "value": "30",
+      "suggest": "30"
     }
   ]
 }
