--- a/etc/ncp-config.d/spDYN.cfg
+++ b/etc/ncp-config.d/spDYN.cfg
@@ -15,12 +15,14 @@
     {
       "id": "DOMAIN",
       "name": "Domain",
-      "value": "mycloud.spdns.de"
+      "value": "mycloud.spdns.de",
+      "suggest": "mycloud.spdns.de"
     },
     {
       "id": "TOKEN",
       "name": "Token",
-      "value": "your-spdns-token"
+      "value": "your-spdns-token",
+      "suggest": "your-spdns-token"
     }
   ]
 }
