--- a/etc/ncp-config.d/nc-export-ncp.cfg
+++ b/etc/ncp-config.d/nc-export-ncp.cfg
@@ -9,7 +9,9 @@
     {
       "id": "DIR",
       "name": "Directory",
-      "value": "/media/USBdrive/"
+      "value": "/media/USBdrive/",
+      "suggest": "/media/USBdrive/",
+      "type": "directory"
     }
   ]
 }
