--- a/etc/ncp-config.d/nc-restore.cfg
+++ b/etc/ncp-config.d/nc-restore.cfg
@@ -9,7 +9,9 @@
     {
       "id": "BACKUPFILE",
       "name": "Backup file",
-      "value": "/media/USBdrive/nextcloud-bkp_xxxxxxxx.tar"
+      "value": "/media/USBdrive/nextcloud-bkp_xxxxxxxx.tar",
+      "suggest": "/media/USBdrive/nextcloud-bkp_xxxxxxxx.tar",
+      "type": "file"
     }
   ]
 }
