--- a/etc/ncp-config.d/nc-static-IP.cfg
+++ b/etc/ncp-config.d/nc-static-IP.cfg
@@ -15,7 +15,8 @@
     {
       "id": "IP",
       "name": "IP",
-      "value": "192.168.1.130"
+      "value": "192.168.1.130",
+      "suggest": "192.168.1.130"
     }
   ]
 }
