--- a/etc/ncp-config.d/fail2ban.cfg
+++ b/etc/ncp-config.d/fail2ban.cfg
@@ -2,7 +2,7 @@
   "id": "fail2ban",
   "name": "Fail2ban, limit brute force authentication attempts",
   "title": "fail2ban",
-  "description": "Brute force protection for SSH and NextCloud. Fail2Ban consists of a client,\nserver and configuration files to limit \nbrute force authentication attempts.",
+  "description": "Brute force protection for SSH and NextCloud",
   "info": "",
   "infotitle": "",
   "params": [
