build: dont use empty values by default

--- a/etc/ncp-config.d/nc-admin.cfg
+++ b/etc/ncp-config.d/nc-admin.cfg
@@ -15,13 +15,13 @@
     {
       "id": "PASSWORD",
       "name": "Password",
-      "value": "",
+      "value": "ownyourbits",
       "type": "password"
     },
     {
       "id": "CONFIRM",
       "name": "Confirm password",
-      "value": "",
+      "value": "ownyourbits",
       "type": "password"
     }
   ]
