--- a/etc/ncp-config.d/freeDNS.cfg
+++ b/etc/ncp-config.d/freeDNS.cfg
@@ -2,7 +2,7 @@
   "id": "freeDNS",
   "name": "Dynamic DNS from freeDNS",
   "title": "freeDNS",
-  "description": "DynamicDNS service from FreeDNS client (need account from https://freedns.afraid.org/)",
+  "description": "FreeDNS DynamicDNS service (need account from https://freedns.afraid.org/)",
   "info": "",
   "infotitle": "",
   "params": [
