nc-rsync: choose ssh port other than 22 (#564)

--- a/etc/ncp-config.d/nc-rsync-auto.cfg
+++ b/etc/ncp-config.d/nc-rsync-auto.cfg
@@ -19,6 +19,12 @@
       "suggest": "user@ip:/path/to/sync"
     },
     {
+      "id": "PORTNUMBER",
+      "name": "SSH port number",
+      "value": "22",
+      "suggest": "22"
+    },
+    {
       "id": "SYNCDAYS",
       "name": "Sync days",
       "value": "3",
