--- a/etc/ncp-config.d/nc-rsync.cfg
+++ b/etc/ncp-config.d/nc-rsync.cfg
@@ -11,6 +11,12 @@
       "name": "Destination",
       "value": "user@ip:/path/to/sync",
       "suggest": "user@ip:/path/to/sync"
+    },
+    {
+      "id": "PORTNUMBER",
+      "name": "SSH port number",
+      "value": "22",
+      "suggest": "22"
     }
   ]
 }
