nc-trusted-domains: add description

--- a/etc/ncp-config.d/nc-trusted-domains.cfg
+++ b/etc/ncp-config.d/nc-trusted-domains.cfg
@@ -3,7 +3,7 @@
   "name": "Nc-trusted-domains",
   "title": "nc-trusted-domains",
   "description": "Manually add trusted domains",
-  "info": "",
+  "info": "Note that this is normally not needed, as NCP will do this automatically for you in most cases",
   "infotitle": "",
   "params": [
     {
