--- a/etc/ncp-config.d/nc-static-IP.cfg
+++ b/etc/ncp-config.d/nc-static-IP.cfg
@@ -2,8 +2,8 @@
   "id": "nc-static-IP",
   "name": "Nc-static-IP",
   "title": "nc-static-IP",
-  "description": "Set up a static IP address (ACTIVE=yes), or DHCP (ACTIVE=no)",
-  "info": "",
+  "description": "Set up a static IP address ",
+  "info": "Static IP (ACTIVE=yes), or DHCP (ACTIVE=no)",
   "infotitle": "",
   "params": [
     {
