nc-nextcloud: add a warning

--- a/etc/ncp-config.d/nc-nextcloud.cfg
+++ b/etc/ncp-config.d/nc-nextcloud.cfg
@@ -3,7 +3,7 @@
   "name": "Nc-nextcloud",
   "title": "nc-nextcloud",
   "description": "Install any NextCloud version. 0 (zero) will install latest stable",
-  "info": "",
+  "info": "WARNING: this will completely wipe out your current instance",
   "infotitle": "",
   "params": [
     {
