--- a/etc/ncp-config.d/nc-nextcloud.cfg
+++ b/etc/ncp-config.d/nc-nextcloud.cfg
@@ -2,7 +2,7 @@
   "id": "nc-nextcloud",
   "name": "Nc-nextcloud",
   "title": "nc-nextcloud",
-  "description": "Install any NextCloud version. 0 (zero) will install latest stable",
+  "description": "Install any NextCloud version",
   "info": "WARNING: this will completely wipe out your current instance",
   "infotitle": "",
   "params": [
