--- a/etc/ncp-config.d/nc-trusted-domains.cfg
+++ b/etc/ncp-config.d/nc-trusted-domains.cfg
@@ -9,19 +9,19 @@
     {
       "id": "DOMAIN1",
       "name": "Trusted Domain #1",
-      "value": "example.ownyourbits.com",
+      "value": "",
       "suggest": "example.ownyourbits.com"
     },
     {
       "id": "DOMAIN2",
       "name": "Trusted Domain #2",
-      "value": "example.ownyourbits.com",
+      "value": "",
       "suggest": "example.ownyourbits.com"
     },
     {
       "id": "DOMAIN3",
       "name": "Trusted Domain #3",
-      "value": "192.168.1.15",
+      "value": "",
       "suggest": "192.168.1.15"
     }
   ]
