--- a/etc/ncp-config.d/nc-backup-auto.cfg
+++ b/etc/ncp-config.d/nc-backup-auto.cfg
@@ -42,6 +42,12 @@
       "name": "Backup limit",
       "suggest": "4",
       "value": "4"
+    },
+    {
+      "id": "NOTIFYUSER",
+      "name": "Notify user",
+      "suggest": "ncp",
+      "value": "ncp"
     }
   ]
 }
