--- a/etc/ncp-config.d/nc-maintenance.cfg
+++ b/etc/ncp-config.d/nc-maintenance.cfg
@@ -3,12 +3,12 @@
   "name": "Nc-maintenanceMode",
   "title": "nc-maintenance-mode",
   "description": "Turn maintenance mode on or off",
-  "info": "Open maintenance mode (ACTIVE=yes), or close maintenance mode  (ACTIVE=no)",
+  "info": "Open maintenance mode (ACTIVE=yes), or close maintenance mode (ACTIVE=no)",
   "infotitle": "",
   "params": [
     {
       "id": "ACTIVE",
-      "name": "Active",
+      "name": "Enabled",
       "value": "no",
       "type": "bool"
     } 
