nc-scan-auto: improvements

--- a/etc/ncp-config.d/nc-scan-auto.cfg
+++ b/etc/ncp-config.d/nc-scan-auto.cfg
@@ -3,7 +3,7 @@
   "name": "Nc-scan-auto",
   "title": "nc-scan-auto",
   "description": "Periodically scan NC for externally modified files",
-  "info": "Set the time in minutes in Scan Interval.\n\n>>> If there are too many files this can greatly affect performance. <<<",
+  "info": "Set the time in minutes in Scan Interval. Optionally we can specify up to 3 paths in the form '_user_/files/_path_'\n\n>>> If there are too many files this can greatly affect performance. <<<",
   "infotitle": "Instructions for auto synchronization",
   "params": [
     {
@@ -17,6 +17,24 @@
       "name": "Scan Interval",
       "value": "60",
       "suggest": "60"
+    },
+    {
+      "id": "PATH1",
+      "name": "Path",
+      "value": "",
+      "suggest": "/ncp/files/Documents"
+    },
+    {
+      "id": "PATH2",
+      "name": "Path",
+      "value": "",
+      "suggest": "/family/files/Photos"
+    },
+    {
+      "id": "PATH3",
+      "name": "Path",
+      "value": "",
+      "suggest": "/family/files/Videos"
     }
   ]
 }
