--- a/etc/ncp-config.d/nc-previews.cfg
+++ b/etc/ncp-config.d/nc-previews.cfg
@@ -3,7 +3,26 @@
   "name": "Nc-previews",
   "title": "nc-previews",
   "description": "Generate previews for the gallery",
-  "info": "This will make browsing the gallery much more smooth.\nFor big collections, this can take a LONG time, depending on your hardware",
+  "info": "This will make browsing the gallery much more smooth.\nFor big collections, this can take a LONG time, depending on your hardware\nOptionally, include a path in the form '/_user_/files/_path_' (incremental only)",
   "infotitle": "",
-  "params": []
+  "params": [
+    {
+      "id": "CLEAN",
+      "name": "Clean first",
+      "value": "no",
+      "type": "bool"
+    },
+    {
+      "id": "INCREMENTAL",
+      "name": "Incremental",
+      "value": "yes",
+      "type": "bool"
+    },
+    {
+      "id": "PATH1",
+      "name": "Path",
+      "value": "",
+      "suggest": "/ncp/files/Documents"
+    }
+  ]
 }
