--- a/etc/ncp-config.d/nc-scan.cfg
+++ b/etc/ncp-config.d/nc-scan.cfg
@@ -3,7 +3,38 @@
   "name": "Nc-scan",
   "title": "nc-scan",
   "description": "Scan NC for externally modified files",
-  "info": "",
+  "info": "Optionally we can specify up to 3 paths in the form '_user_/files/_path_'",
   "infotitle": "",
-  "params": []
+  "params": [
+    {
+      "id": "RECURSIVE",
+      "name": "Recursive",
+      "value": "yes",
+      "type": "bool"
+    },
+    {
+      "id": "NONEXTERNAL",
+      "name": "Ignore external files",
+      "value": "no",
+      "type": "bool"
+    },
+    {
+      "id": "PATH1",
+      "name": "Path",
+      "value": "",
+      "suggest": "/ncp/files/Documents"
+    },
+    {
+      "id": "PATH2",
+      "name": "Path",
+      "value": "",
+      "suggest": "/family/files/Photos"
+    },
+    {
+      "id": "PATH3",
+      "name": "Path",
+      "value": "",
+      "suggest": "/family/files/Videos"
+    }
+  ]
 }
