nc-update-nc-apps-auto: notify user

--- a/etc/ncp-config.d/nc-update-nc-apps-auto.cfg
+++ b/etc/ncp-config.d/nc-update-nc-apps-auto.cfg
@@ -11,6 +11,12 @@
       "name": "Active",
       "value": "no",
       "type": "bool"
+    },
+    {
+      "id": "USER",
+      "name": "Notify user",
+      "value": "ncp",
+      "suggest": "ncp"
     }
   ]
 }
