ncp-web: add backups panel

--- a/etc/ncp-config.d/nc-import-ncp.cfg
+++ b/etc/ncp-config.d/nc-import-ncp.cfg
@@ -9,8 +9,8 @@
     {
       "id": "FILE",
       "name": "File",
-      "value": "/media/USBdrive/ncp-config_xxxxxx.cfg",
-      "suggest": "/media/USBdrive/ncp-config_xxxxxx.cfg",
+      "value": "/media/USBdrive/ncp-config_xxxxxx.tar",
+      "suggest": "/media/USBdrive/ncp-config_xxxxxx.tar",
       "type": "file"
     }
   ]
