Info text corrected
The info text says, that a snapshot will be "taken". That is wrong!
We are in restore-mode --> a snapshot will be "restored"

--- a/etc/ncp-config.d/nc-restore-snapshot.cfg
+++ b/etc/ncp-config.d/nc-restore-snapshot.cfg
@@ -3,7 +3,7 @@
   "name": "Nc-restore-snapshot",
   "title": "nc-restore-snapshot",
   "description": "Restore data from a BTRFS snapshot",
-  "info": "A snapshot of the current data will be taken",
+  "info": "A snapshot of the data will be restored",
   "infotitle": "Restore NextCloud data snapshot",
   "params": [
     {
