Restore: ability to choose data directory
Signed-off-by: Tanarri <eugen@albiker.org>

--- a/etc/ncp-config.d/nc-restore.cfg
+++ b/etc/ncp-config.d/nc-restore.cfg
@@ -3,7 +3,7 @@
   "name": "Nc-restore",
   "title": "nc-restore",
   "description": "Restore a previously backuped NC instance",
-  "info": "This new installation will cleanup current\nNextCloud instance, including files and database.\n\n** perform backup before proceding **\n\nYou can use 'nc-backup'",
+  "info": "This new installation will cleanup current\nNextCloud instance, including files and database.\nLocation of data directory will be read from the backupfile.\n\n** perform backup before proceding **\nYou can use 'nc-backup'",
   "infotitle": "Restore NextCloud backup",
   "params": [
     {
@@ -12,6 +12,12 @@
       "value": "/media/USBdrive/ncp-backups/nextcloud-bkp_xxxxxxxx.tar",
       "suggest": "/media/USBdrive/ncp-backups/nextcloud-bkp_xxxxxxxx.tar",
       "type": "file"
+    },
+    {
+      "id": "CURRENTDATADIR",
+      "name": "Use currently configured data directory",
+      "value": "no",
+      "type": "bool"
     }
   ]
 }
