Rename configuration variables into self-documenting ones Fixes #886
Signed-off-by: Julian Hofer <julian.public@protonmail.com>

--- a/etc/ncp-config.d/nc-backup-auto.cfg
+++ b/etc/ncp-config.d/nc-backup-auto.cfg
@@ -33,13 +33,13 @@
     },
     {
       "id": "BACKUPDAYS",
-      "name": "Backup days",
+      "name": "Backup periodicity (in days)",
       "suggest": "7",
       "value": "7"
     },
     {
       "id": "BACKUPLIMIT",
-      "name": "Backup limit",
+      "name": "Number of backups to keep",
       "suggest": "4",
       "value": "4"
     },
