--- a/etc/ncp-config.d/nc-backup.cfg
+++ b/etc/ncp-config.d/nc-backup.cfg
@@ -27,7 +27,7 @@
     },
     {
       "id": "BACKUPLIMIT",
-      "name": "Backup limit",
+      "name": "Number of backups to keep",
       "value": "4",
       "suggest": "4"
     }
