--- a/etc/ncp-config.d/nc-previews-auto.cfg
+++ b/etc/ncp-config.d/nc-previews-auto.cfg
@@ -14,7 +14,7 @@
     },
     {
       "id": "RUNTIME",
-      "name": "Run time",
+      "name": "Runtime (in minutes)",
       "value": "0",
       "suggest": "0"
     }
