--- a/etc/ncp-config.d/nc-rsync-auto.cfg
+++ b/etc/ncp-config.d/nc-rsync-auto.cfg
@@ -26,7 +26,7 @@
     },
     {
       "id": "SYNCDAYS",
-      "name": "Sync days",
+      "name": "Sync periodicity (in days)",
       "value": "3",
       "suggest": "3"
     }
