--- a/etc/ncp-config.d/nc-scan-auto.cfg
+++ b/etc/ncp-config.d/nc-scan-auto.cfg
@@ -14,7 +14,7 @@
     },
     {
       "id": "SCANINTERVAL",
-      "name": "Scan Interval",
+      "name": "Scan periodicity (in minutes)",
       "value": "60",
       "suggest": "60"
     },
