--- a/etc/ncp-config.d/nc-snapshot-sync.cfg
+++ b/etc/ncp-config.d/nc-snapshot-sync.cfg
@@ -33,7 +33,7 @@
     },
     {
       "id": "SYNCDAYS",
-      "name": "Sync days",
+      "name": "Sync periodicity (in days)",
       "value": "1",
       "suggest": "1"
     }
