--- a/etc/ncp-config.d/freeDNS.cfg
+++ b/etc/ncp-config.d/freeDNS.cfg
@@ -26,7 +26,7 @@
     },
     {
       "id": "UPDATEINTERVAL",
-      "name": "Update Interval",
+      "name": "Update periodicity (in minutes)",
       "value": "30",
       "suggest": "30"
     }
