nc-scan-auto: recursive and home-only options
Signed-off-by: nachoparker <nacho@ownyourbits.com>

--- a/etc/ncp-config.d/nc-scan-auto.cfg
+++ b/etc/ncp-config.d/nc-scan-auto.cfg
@@ -13,6 +13,18 @@
       "type": "bool"
     },
     {
+      "id": "RECURSIVE",
+      "name": "Recursive",
+      "value": "yes",
+      "type": "bool"
+    },
+    {
+      "id": "NONEXTERNAL",
+      "name": "Ignore external files",
+      "value": "no",
+      "type": "bool"
+    },
+    {
       "id": "SCANINTERVAL",
       "name": "Scan periodicity (in minutes)",
       "value": "60",
