build: refactor docker builds
Signed-off-by: nachoparker <nacho@ownyourbits.com>

--- a/docker/debian-ncp/Dockerfile
+++ b/docker/debian-ncp/Dockerfile
@@ -1,9 +1,19 @@
-FROM debian:stretch-slim
+ARG arch=armhf
+ARG arch_qemu=arm
+FROM debian:stretch-slim AS qemu
 
-MAINTAINER Ignacio Núñez Hernanz <nacho@ownyourbits.com>
+RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends qemu-user-static
+
+FROM ${arch}/debian:stretch-slim
+
+ARG arch_qemu
+
+LABEL maintainer="Ignacio Núñez Hernanz <nacho@ownyourbits.com>"
 
 CMD /bin/bash
 
+COPY --from=qemu /usr/bin/qemu-${arch_qemu}-static /usr/bin/
+
 RUN mkdir -p /etc/services-available.d  /etc/services-enabled.d
 
-COPY docker-common/debian-ncp/run-parts.sh /
+COPY docker/debian-ncp/run-parts.sh /
