--- a/docker/lamp/Dockerfile
+++ b/docker/lamp/Dockerfile
@@ -10,11 +10,14 @@ SHELL ["/bin/bash", "-c"]
 
 ENV DOCKERBUILD 1
 
-COPY etc/library.sh lamp.sh /usr/local/etc/
+COPY etc/ncp.cfg etc/library.sh lamp.sh /usr/local/etc/
 
 RUN --mount=type=cache,target=/var/cache/apt --mount=type=cache,target=/var/lib/apt \
 
 # installation
+apt-get update; \
+apt-get install --no-install-recommends -y jq; \
+
 source /usr/local/etc/library.sh; \
 set +x; \
 install_app /usr/local/etc/lamp.sh; \
