move to buster/PHP7.3
Signed-off-by: nachoparker <nacho@ownyourbits.com>

--- a/etc/ncp.cfg
+++ b/etc/ncp.cfg
@@ -1,9 +1,9 @@
 {
-	"nextcloud_version": "16.0.2",
-	"php_version": "7.2",
-	"release": "stretch",
+	"nextcloud_version": "16.0.3",
+	"php_version": "7.3",
+	"release": "buster",
 	"release_issue": [
-		"Debian GNU/Linux 9",
-		"Raspbian GNU/Linux 9"
+		"Debian GNU/Linux 10",
+		"Raspbian GNU/Linux 10"
 	]
 }
