nc-previews: active by default
Signed-off-by: nachoparker <nacho@ownyourbits.com>

--- a/etc/ncp-config.d/nc-previews-auto.cfg
+++ b/etc/ncp-config.d/nc-previews-auto.cfg
@@ -9,7 +9,7 @@
     {
       "id": "ACTIVE",
       "name": "Active",
-      "value": "no",
+      "value": "yes",
       "type": "bool"
     },
     {
