--- a/etc/ncp.cfg
+++ b/etc/ncp.cfg
@@ -1,9 +1,5 @@
 {
 	"nextcloud_version": "16.0.3",
 	"php_version": "7.3",
-	"release": "buster",
-	"release_issue": [
-		"Debian GNU/Linux 10",
-		"Raspbian GNU/Linux 10"
-	]
+	"release": "buster"
 }
