letsencrypt: support additional domain in ncp-app
Signed-off-by: Henning Schiebenhoefer <henning.schiebenhoefer@posteo.de>

--- a/etc/ncp-config.d/letsencrypt.cfg
+++ b/etc/ncp-config.d/letsencrypt.cfg
@@ -13,6 +13,12 @@
       "suggest": "mycloud.ownyourbits.com"
     },
     {
+      "id": "ADDITIONAL_DOMAIN",
+      "name": "Additional domain",
+      "value": "cloud.ownyourbits.com",
+      "suggest": "cloud.ownyourbits.com"
+    },
+    {
       "id": "EMAIL",
       "name": "Email",
       "value": "mycloud@ownyourbits.com",
