letsencrypt: leave default for additional domain empty
Signed-off-by: Henning Schiebenhoefer <henning.schiebenhoefer@posteo.de>

--- a/etc/ncp-config.d/letsencrypt.cfg
+++ b/etc/ncp-config.d/letsencrypt.cfg
@@ -15,7 +15,7 @@
     {
       "id": "ADDITIONAL_DOMAIN",
       "name": "Additional domain",
-      "value": "cloud.ownyourbits.com",
+      "value": "",
       "suggest": "cloud.ownyourbits.com"
     },
     {
