multi-factor-authentication: Use jq in 'raw' mode (to avoid additional quotes)
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>
Signed-off-by: Tobias Knöppler <6317548+theCalcaholic@users.noreply.github.com>

--- a/etc/ncp-config.d/multi-factor-authentication.cfg
+++ b/etc/ncp-config.d/multi-factor-authentication.cfg
@@ -1,9 +1,9 @@
 {
-  "id": "MFA",
+  "id": "multi-factor-authentication",
   "name": "Activate multi factory authentication for SSH login",
   "title": "Multi-Factor-Authentication",
   "description": "Choose among different (single and multi factor) authentication methods for SSH login.",
-  "info": "The default method (e.g. when this app is disabled) is 'password only'. Please not that single factor authentication methods can not be enabled at the same time as multi factor authentication methods",
+  "info": "The default method (e.g. when this app is disabled) is 'password only'.\nPlease not that single factor authentication methods can not be enabled at the same time as multi factor authentication methods",
   "infotitle": "MFA notes",
   "params": [
     {
@@ -14,31 +14,31 @@
     },
     {
       "id": "ENABLE_PASSWORD_ONLY",
-      "name": "enable password only authentication",
+      "name": "enable-password-only-authentication",
       "value": "yes",
       "type": "bool"
     },
     {
       "id": "ENABLE_PUBLIC_KEY_ONLY",
-      "name": "enable public key only authentication",
+      "name": "enable-public-key-only-authentication",
       "value": "no",
       "type": "bool"
     },
     {
       "id": "ENABLE_PUBLIC_KEY_AND_PASSWORD",
-      "name": "enable public key + password authentication (MFA)",
+      "name": "enable-public-key-plus-password-authentication",
       "value": "no",
       "type": "bool"
     },
     {
       "id": "ENABLE_TOTP_AND_PASSWORD",
-      "name": "enable time-based one time password (TOTP) + password (MFA)",
+      "name": "enable-time-based-one-time-password-plus-password",
       "value": "no",
       "type": "bool"
     },
     {
-      "id": "RESET_TOTP CLIENT SECRET",
-      "name": "reset the TOTP client secret when applying changes",
+      "id": "RESET_TOTP SECRET",
+      "name": "reset-the-TOTP-client-secret-when-applying-changes",
       "value": "no",
       "type": "bool"
     }
