multi-factor-authentication: Implement public key setup
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>
Signed-off-by: Tobias Knöppler <6317548+theCalcaholic@users.noreply.github.com>

--- a/etc/ncp-config.d/multi-factor-authentication.cfg
+++ b/etc/ncp-config.d/multi-factor-authentication.cfg
@@ -14,33 +14,39 @@
     },
     {
       "id": "ENABLE_PASSWORD_ONLY",
-      "name": "enable-password-only-authentication",
+      "name": "enable-password-only",
       "value": "yes",
       "type": "bool"
     },
     {
       "id": "ENABLE_PUBLIC_KEY_ONLY",
-      "name": "enable-public-key-only-authentication",
+      "name": "enable-public-key-only",
       "value": "no",
       "type": "bool"
     },
     {
       "id": "ENABLE_PUBLIC_KEY_AND_PASSWORD",
-      "name": "enable-public-key-plus-password-authentication",
+      "name": "enable-public-key-plus-password",
       "value": "no",
       "type": "bool"
     },
     {
       "id": "ENABLE_TOTP_AND_PASSWORD",
-      "name": "enable-time-based-one-time-password-plus-password",
+      "name": "enable-TOTP-plus-password",
       "value": "no",
       "type": "bool"
     },
     {
       "id": "RESET_TOTP SECRET",
-      "name": "reset-the-TOTP-client-secret-when-applying-changes",
+      "name": "reset-TOTP-secret",
       "value": "no",
       "type": "bool"
+    },
+    {
+      "id": "SSH_PUBLIC_KEY",
+      "name": "SSH Public Key",
+      "value": "",
+      "suggest": "Paste your public key here"
     }
   ]
 }
