Implement escaping of spaces in ncp-app parameters
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>
Signed-off-by: Tobias Knöppler <6317548+theCalcaholic@users.noreply.github.com>

--- a/etc/ncp-config.d/multi-factor-authentication.cfg
+++ b/etc/ncp-config.d/multi-factor-authentication.cfg
@@ -46,7 +46,8 @@
       "id": "SSH_PUBLIC_KEY",
       "name": "SSH Public Key",
       "value": "",
-      "suggest": "Paste your public key here"
+      "suggest": "Paste your public key here",
+      "allow_unsafe": "true"
     }
   ]
 }
