--- a/etc/ncp-config.d/multi-factor-authentication.cfg
+++ b/etc/ncp-config.d/multi-factor-authentication.cfg
@@ -3,7 +3,7 @@
   "name": "Activate multi factory authentication for SSH login",
   "title": "Multi-Factor-Authentication",
   "description": "Choose among different (single and multi factor) authentication methods for SSH login.",
-  "info": "The default method (e.g. when this app is disabled) is 'password only'.\nPlease not that single factor authentication methods can not be enabled at the same time as multi factor authentication methods",
+  "info": "The default method (i.e. this app being disabled) is 'password only'.\nPlease not that single factor authentication methods can not be enabled at the same time as multi factor authentication methods.\nThe TOTP authentication requires a compatible app to be used, e.g. FreeOTP, Google Authenticator or Authy.\nIf you enable multiple options, they will act as alternatives.",
   "infotitle": "MFA notes",
   "params": [
     {
