multi-factor-authentication: Ensure we have permissions to delete google authenticator configuration when resetting it
Signed-off-by: Tobias K <6317548+theCalcaholic@users.noreply.github.com>
Signed-off-by: Tobias Knöppler <6317548+theCalcaholic@users.noreply.github.com>

--- a/etc/ncp-config.d/multi-factor-authentication.cfg
+++ b/etc/ncp-config.d/multi-factor-authentication.cfg
@@ -31,7 +31,7 @@
       "type": "bool"
     },
     {
-      "id": "RESET_TOTP SECRET",
+      "id": "RESET_TOTP_SECRET",
       "name": "reset-TOTP-secret",
       "value": "no",
       "type": "bool"
